syntax = "proto3";
package tccpb;

option go_package = "../tccpb";

enum TccOp{
  Invalid = 0;
  Try = 1;
  Confirm = 2;
  Cancel = 3;
}

message Empty{}

message TccRequest{
  TccOp op = 1;
  string payloads = 2;
  string gid = 3;
  string branch_id = 4;
  map<string, string> header = 5;
}

service Tcc{
  rpc ExecBranch(TccRequest) returns (Empty);
}